--- a/MyHome/app/src/main/res/layout/visit_summary.xml
+++ b/MyHome/app/src/main/res/layout/visit_summary.xml
@@ -196,6 +196,7 @@
                 android:visibility="gone" />
 
             <RelativeLayout
+                android:id="@+id/relative_email_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/email_text"
@@ -209,12 +210,27 @@
                     android:scrollbars="none" />
             </RelativeLayout>
 
+            <TextView
+                android:id="@+id/add_additional_email_cta"
+                style="@style/tradeGothicLTStd_Dynamic20"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/relative_email_list"
+                android:gravity="left"
+                android:layout_alignParentLeft="true"
+                android:layout_marginTop="27dp"
+                android:paddingBottom="12dp"
+                android:text="@string/add_additional_email"
+                android:contentDescription="@string/add_additional_email"
+                android:textColor="@color/accent"
+                android:textStyle="bold" />
+
             <RelativeLayout
                 android:id="@+id/new_email_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/new_email_layout"
-                android:visibility="visible">
+                android:visibility="gone">
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/new_email_textinput"
@@ -230,7 +246,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
-                        android:hint="@string/email_hint"
                         android:imeOptions="actionNext"
                         android:inputType="textCapWords"
                         android:maxLength="35"
