--- a/MyHome/app/src/main/res/layout/environment_selector.xml
+++ b/MyHome/app/src/main/res/layout/environment_selector.xml
@@ -139,6 +139,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/env_amwell_radio_group"
                 android:layout_margin="6dp"
+                android:checked="true"
                 android:text="Attempt Sign-In with Mutual Auth" />
 
             <android.support.design.widget.TextInputLayout
@@ -146,6 +147,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/checkbox_mutual_auth"
+                android:visibility="gone"
                 app:errorEnabled="true"
                 app:errorTextAppearance="@style/error_appearance"
                 app:hintTextAppearance="@style/hint_appearance">
@@ -171,6 +173,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/user_layout"
+                android:visibility="gone"
                 app:errorEnabled="true"
                 app:errorTextAppearance="@style/error_appearance"
                 app:hintTextAppearance="@style/hint_appearance"
