--- a/MyHome/app/src/main/res/layout/fragment_medications.xml
+++ b/MyHome/app/src/main/res/layout/fragment_medications.xml
@@ -119,7 +119,7 @@
         android:id="@+id/searchSuggestions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/searchLayout"
+        android:layout_below="@+id/toolbar_line"
         android:background="@color/white"
         android:visibility="gone" />
 
